--- a/src/scss/components/_keyBtn.scss
+++ b/src/scss/components/_keyBtn.scss
@@ -7,3 +7,45 @@
   // background-color: #333333;
   border-radius: 4px;
 }
+.number,
+.letter,
+.special-letter {
+  background-color: #666666;
+}
+
+.special,
+.arrow {
+  background-color: #333333;
+  background-position: center center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  &-up {
+    background-image: url("../assets/svg/arrow-up.svg");
+  }
+  &-down {
+    background-image: url("../assets/svg/arrow-down.svg");
+  }
+  &-left {
+    background-image: url("../assets/svg/arrow-left.svg");
+  }
+  &-right {
+    background-image: url("../assets/svg/arrow-right.svg");
+  }
+}
+
+.special {
+  width: auto;
+  min-width: 40px;
+  padding: 0 15px;
+}
+
+.special-letter {
+  width: auto;
+  min-width: 40px;
+  flex: 1 0 auto;
+  padding: 0 15px;
+}
+
+.active {
+  box-shadow: 0 0 15px #3af660;
+}
