--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 // @import "layout/sidebar";
 // @import "layout/forms";
 
+@import "components/table";
 @import "components/keyBtn";
 // @import "components/carousel";
 // @import "components/cover";
