feat: add legend to the app, save layout after page reload

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -20,6 +20,10 @@
   row-gap: 10px;
   column-gap: 10px;
 }
+.legend {
+  width: 780px;
+  margin: 0 auto;
+}
 
 .keyAnimation {
   animation-name: keyShape;
